# temporal-ecommerce-agent

./: .gitignore  BUILD_SUMMARY.md  Makefile  QUICKSTART.md  README.md  env.example  pyproject.toml  requirements.txt  setup.py
src/: demo.py  worker.py
src/activities/: order_activities.py
src/agents/: base.py  customer_service.py  fulfillment.py  order_intake.py  payment.py
src/models/: order.py
src/utils/: json_encoder.py
src/workflows/: order_processing.py
tests/: test_agents.py
